--- a/notebooks/train_try.ipynb
+++ b/notebooks/train_try.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4f8f5b87",
+   "metadata": {},
+   "source": [
+    "Trial notebook to test out models, not for deployment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ade29eae",
